[metadata]
name = YorkUphysLabs
version = 1.0.2
author = Mohammad Kareem
author_email = mkareem@yorku.ca
description = A Python package to control YU physics labs equipment
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/m-kareem/YorkUphysLabs
project_urls =
    Bug Tracker = https://github.com/m-kareem/YorkUphysLabs/issues
    repository = https://github.com/m-kareem/YorkUphysLabs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:

python_requires = >=3.7

install_requires =
    nidaqmx
    pyserial

[options.packages.find]
where=src